Changes in Version 0.1.5
========================
pycdf
 - fix bug with interpreting indexes with ellipses (var[..., 0] gave the
   wrong result).
 - epoch16_to_epoch: round sub-milliseconds rather than truncate.
 - sped up indexing in variable copies
 - improved handling of numpy fancy indexing in variable copies
   (fancy indexing is still not supported for variables themselves.)
toolbox
 - add function timeout_check_call to run another program with a timeout

Changes in Version 0.1.4
========================
- Removed deprecated functions/classes
  - time
    - Tickdelta class (use datetime.timedelta)
    - num2date, date2num functions (use matplotlib.dates)
  - toolbox
    - printfig, smartTimeTicks, applySmartTimeTicks, timestamp functions
      (moved to plot.utils)
    - leapyear, randomDate functions (moved to time)
- Minor bugfixes and speed-ups across package
- Expanded unit-testing
- Changed download prompt on install to information only
datamodel
 - output from datamodel to JSON-headed ASCII added
 - output from datamodel to NASA CDF added
 - new methods on dmarrays (append, concatenate, h/v/dstack)
empiricals
 - fixed bug in getPlasmaPause implementation of Moldwin et al., 2002 model
 - getPlasmaPause accepts optional dict-like of inputs instead of calling omni module
irbempy
 - updated to latest revision of IRBEM library (rev425)
 - consistent with IRBEMlib release version 4.4.0
 - add support for building with Intel Fortran compiler
LANL*
 - added new neural network trained on RAM-SCB model (valid inside 6.6Re)
pybats
 - Nearly all classes inherit from PbData, which is a subclass of SpaceData.
 - All add_* plotting methods have unified "target" and "loc" kwargs for selecting where to place plots.
 - New submodule: dgcpm, for handling the DGCPM model input/output.
 - New class: NgdcIndex, for handling NGDC input data for SWMF runs.
 - Bats2d class: stream tracing navigates native quadtree.